; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/continuous_aggs/extr_create.c_get_finalizefnoid.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/continuous_aggs/extr_create.c_get_finalizefnoid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TEXTOID = common dso_local global i32 0, align 4
@NAMEOID = common dso_local global i32 0, align 4
@BYTEAOID = common dso_local global i32 0, align 4
@ANYELEMENTOID = common dso_local global i32 0, align 4
@INTERNAL_SCHEMA_NAME = common dso_local global i32 0, align 4
@FINALFN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_finalizefnoid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_finalizefnoid() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [6 x i32], align 16
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = getelementptr inbounds [6 x i32], [6 x i32]* %2, i64 0, i64 0
  %6 = load i32, i32* @TEXTOID, align 4
  store i32 %6, i32* %5, align 4
  %7 = getelementptr inbounds i32, i32* %5, i64 1
  %8 = load i32, i32* @NAMEOID, align 4
  store i32 %8, i32* %7, align 4
  %9 = getelementptr inbounds i32, i32* %7, i64 1
  %10 = load i32, i32* @NAMEOID, align 4
  store i32 %10, i32* %9, align 4
  %11 = getelementptr inbounds i32, i32* %9, i64 1
  %12 = load i32, i32* @NAMEOID, align 4
  %13 = call i32 @get_array_type(i32 %12)
  store i32 %13, i32* %11, align 4
  %14 = getelementptr inbounds i32, i32* %11, i64 1
  %15 = load i32, i32* @BYTEAOID, align 4
  store i32 %15, i32* %14, align 4
  %16 = getelementptr inbounds i32, i32* %14, i64 1
  %17 = load i32, i32* @ANYELEMENTOID, align 4
  store i32 %17, i32* %16, align 4
  %18 = load i32, i32* @INTERNAL_SCHEMA_NAME, align 4
  %19 = call i32 @makeString(i32 %18)
  %20 = load i32, i32* @FINALFN, align 4
  %21 = call i32 @makeString(i32 %20)
  %22 = call i32* @list_make2(i32 %19, i32 %21)
  store i32* %22, i32** %3, align 8
  store i32 6, i32* %4, align 4
  %23 = load i32*, i32** %3, align 8
  %24 = load i32, i32* %4, align 4
  %25 = getelementptr inbounds [6 x i32], [6 x i32]* %2, i64 0, i64 0
  %26 = call i32 @LookupFuncName(i32* %23, i32 %24, i32* %25, i32 0)
  store i32 %26, i32* %1, align 4
  %27 = load i32, i32* %1, align 4
  ret i32 %27
}

declare dso_local i32 @get_array_type(i32) #1

declare dso_local i32* @list_make2(i32, i32) #1

declare dso_local i32 @makeString(i32) #1

declare dso_local i32 @LookupFuncName(i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
